--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello world, I'm SGABENZA !!!!!
+<head>
+  <style>
+    a {
+      padding: 5px;
+      text-decoration: none;
+      color: black;
+      border: solid;
+    }
+    .navbar {
+        display: flex;
+        align-items: center;
+        margin: 20px 0;
+    }
+    .nav-btn {
+        margin: 0 10px;
+    }
+  </style>
+</head>
+<div class="navbar">
+  <div>Hello world, I'm SGABENZA !!!!!</div>
+  <div class="nav-btn"><a href="./cv.html">CURRICULUM VITAE</a></div>
+</div>
