--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
       color: black;
       border: solid;
     }
-    .navbar {
-        display: flex;
-        align-items: center;
-        margin: 20px 0;
+    .homepage {
+      display: flex;
+      flex: 1 0 0;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px 0;
+      width: 100%;
+      height: 100%;
     }
-    .nav-btn {
-        margin: 0 10px;
+    .link-btn {
+      margin: 0 10px;
+    }
+    .hello {
+      height: 100px;
     }
   </style>
 </head>
-<div class="navbar">
-  <div>Hello world, I'm SGABENZA !!!!!</div>
-  <div class="nav-btn"><a href="./cv.html">CURRICULUM VITAE</a></div>
+<div class="homepage">
+  <div class="hello">Hello world, I'm SGABENZA !!!!!</div>
+  <h3>Here is my: </h3>
+  <div class="link-btn"><a href="./cv.html">CURRICULUM VITAE</a></div>
 </div>
