[CV] Senior Frontend Developer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 </head>
 <div class="homepage">
   <div class="hello">Hello world, I'm SGABENZA !!!!!</div>
-  <h3>Here is my: </h3>
-  <div class="link-btn"><a href="./cv.html">CURRICULUM VITAE</a></div>
+  <h3>Here are the projects I worked on: </h3>
+  <div class="link-btn"><a href="./cv.html">PUSH THE BUTTON</a></div>
 </div>
